Revert "getting started on web build F11 toggle fullscreen"
This reverts commit a6e1f027ad4f8d80e6f71da0f24122a9c6835e71.